# pcprep

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  README_8md.html  USAGE.md  aabb_8h.html  aabb_8h.js  aabb_8h__dep__incl.map  aabb_8h__dep__incl.md5  aabb_8h__incl.map  aabb_8h__incl.md5  aabb_8h_source.html  annotated.html  annotated_dup.js  canvas_8h.html  canvas_8h.js  canvas_8h__dep__incl.map  canvas_8h__dep__incl.md5  canvas_8h__incl.map  canvas_8h__incl.md5  canvas_8h_source.html  classes.html  core_8h.html  core_8h.js  core_8h__dep__incl.map  core_8h__dep__incl.md5  core_8h__incl.map  core_8h__incl.md5  core_8h_source.html  dir_000002_000000.html  dir_0dcdef47125e14cdb6b10a4e01e36f01.html  dir_0dcdef47125e14cdb6b10a4e01e36f01.js  dir_0dcdef47125e14cdb6b10a4e01e36f01_dep.map  dir_0dcdef47125e14cdb6b10a4e01e36f01_dep.md5  (+112 more)
.github/workflows/: ci.yml
assets/: cam-matrix.json  cam-param.json
cmake/: docs-ci.cmake  install-config.cmake  install-rules.cmake  lint.cmake  variables.cmake
docs/: Doxyfile.in
example/: CMakeLists.txt  cam2mat.cpp
include/pcprep/: aabb.h  canvas.h  core.h  mesh.h  pointcloud.h  vec3f.h  vec3u.h  vec3uc.h  wrapper.h
pcp/: CMakeLists.txt  pcp.c  pcp.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  functions_0.js  functions_1.js  (+35 more)
source/: aabb.c  cJSON.c  canvas.c  core.c  mesh.c  miniply.cpp  pointcloud.c  wrapper.cpp
source/include/: cJSON.h  msh_ply.h
source/include/miniply/: miniply.h
test/: CMakeLists.txt
test/source/: pc_io.c  subsampling.c  tiling.c
